<resources>
    <string name="app_name">Stenly Client</string>
    <string name="play_bth">MULAI</string>
    <string name="samp_ver">SA-MP 0.3.7 • Stenly Client</string>
    <string name="client_name">STENLY CLIENT</string>
    <string name="servers_btn">DAFTAR SERVER</string>
    <string name="settings_btn">PENGATURAN</string>
    <string name="bug_info">Stenly Client • data game wajib terpasang untuk bermain</string>
    <string name="authors">based on SA-MP Mobile 2.11 (open source)</string>
    <string name="downloaderAssetsHeader">Preparing assets:</string>
    <string name="downloaderError">Error</string>
    <string name="downloaderNoData">Game Data was either not installed or was deleted. Please connect to the internet and relaunch so it can download!</string>
    <string name="downloaderPausedCellular">Would you like to enable downloading over cellular connections? Depending on your data plan, this may cost you money.</string>
    <string name="downloaderPausedCellular2">If you choose not to enable downloading over cellular connections, the download will automatically resume when wi-fi is available.</string>
    <string name="downloaderResumeCellular">Resume download</string>
    <string name="downloaderStateAwaitingWifi">Waiting for WiFi</string>
    <string name="downloaderStateCancelled">Cancelled</string>
    <string name="downloaderStateCompleted">Done</string>
    <string name="downloaderStateConnecting">Connecting…</string>
    <string name="downloaderStateFailed">Failed</string>
    <string name="downloaderStateFetchingUrl">Querying…</string>
    <string name="downloaderStateIdle">Waiting…</string>
    <string name="downloaderStateTransferring">Installing…</string>
    <string name="downloaderStateUnknown">Waiting…</string>
    <string name="downloaderStatusPercentage">%d%%</string>
    <string name="downloaderStatusSize">%1$d MB / %2$d MB</string>
    <string name="downloaderWifiSettings">Wi-Fi settings</string>
    <string name="asset_pack_main">Game data</string>
    <string name="asset_pack_sfx1">Audio (part 1)</string>
    <string name="asset_pack_sfx2">Audio (part 2)</string>
    <string name="asset_pack_streams">Audio (part 3)</string>
</resources>